[package]
name = "firecrawl"
version = "1.0.0"
edition = "2024"
license = "MIT"
homepage = "https://www.firecrawl.dev/"
repository ="https://github.com/mendableai/firecrawl"
description = "Rust SDK for Firecrawl API."
authors = ["Gergő Móricz <mogery@firecrawl.dev>", "sanix-darker <sanixdk@gmail.com>"]

[lib]
path = "src/lib.rs"
name = "firecrawl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true

log = "0.4.25"
thiserror = "2.0.11"
serde_with = "3.12.0"

[dev-dependencies]
assert_matches = "1.5.0"
dotenvy.workspace = true
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
tokio = { workspace = true, features = ["full"] }
